# mseos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  readme.md
apps/stm32blink/: CMakeLists.txt  Makefile  head.s  linkerscript.ld  main.c
cmake/: toolchain_arm_none_eabi.cmake  toolchain_gcc.cmake
doc/: mseos.rst
kernel/: CMakeLists.txt  main.c
kernel/cpu/arm/: boot.c
kernel/include/: stdint.h
kernel/include/cpu/arm/device/st/stm32f4xx/: stm32f429xx.h
kernel/include/sys/: syscall.h  types.h
kernel/mseos/: boot.c  boot.h  kernel.c  kernel.h  main.c  main.h
kernel/mseos/sys/: kheap.c  kheap.h  memops.c  memops.h  scheduler.c  scheduler.h  syscall_handle.c  syscall_handle.h  tick.c  tick.h
kernel/platform/stm32f429_discovery/: boot.c  configure.h  gpio.csv  head.s  linkerscript.ld  openocd.sh  platform.c
tools/bin2c/: CMakeLists.txt  Makefile  bin2c.c
