cmake_minimum_required(VERSION 3.6)

project(mseos)

################################################################################
##                            APPS                                            ##
################################################################################

add_subdirectory(apps/stm32blink)

################################################################################
##                            TOOLS                                           ##
################################################################################

add_subdirectory(tools/bin2c)

################################################################################
##                            KERNEL                                          ##
################################################################################

add_subdirectory(kernel)

