cmake_minimum_required(VERSION 3.6)

project(mseos)

################################################################################
##                            TOOLS                                           ##
################################################################################

add_subdirectory(tools/bin2c)

################################################################################
##                            APPS                                            ##
################################################################################

add_subdirectory(apps/stm32blink)

################################################################################
##                            KERNEL                                          ##
################################################################################

add_subdirectory(kernel)

## This is hack for CLion (false dependency error)
set(CMAKE_C_COMPILER "arm-none-eabi-gcc")
